.kube/es-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: microservices-submission
  labels:
    app: es-backend
  name: es-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es-backend
  template:
    metadata:
      labels:
        app: es-backend
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: es-backend
          image: registry.gitlab.com/editory_submission/es_backend:latest
          imagePullPolicy: Always
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: microservices-submission
  name: es-backend
  labels:
    app: es-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: es-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-backend
  namespace: microservices-submission
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.submission.editorypress.org
      secretName: es-backend-tls
  rules:
    - host: api.submission.editorypress.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: es-backend
                port:
                  number: 80
